--- a/test/index.html
+++ b/test/index.html
@@ -15,8 +15,8 @@
 <body>
 <div class="map"></div>
 
-<script src="http://map.qq.com/api/js?v=2.exp&key=5LIBZ-WGHWO-I2LWD-SXGRK-G2D6J-5LB6O&libraries=geometry,convertor"></script>
-<script src="../src/qqMap.min.js"></script>
+<script src="http://map.qq.com/api/js?v=2.exp&key=yourkey&libraries=geometry,convertor"></script>
+<script src="../lib/qqMap.min.js"></script>
 <script>
     var map = QQMap.init(".map", {
         center: [39.916527, 116.397128],
